--- a/Game_Jame/app/index.html
+++ b/Game_Jame/app/index.html
@@ -1,52 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--! MODIFIER LES ROUTES EN FONCTION DE L'ARCHITECTURE DEFINITIVE -->
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
-    <script src="script-path.js" defer></script>
-    <!-- ====================================== -->
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./Css/style.css">
+  <script src="./games/breakout.js" defer></script>
+  <script src="./games/path.js" defer></script>
+  <script src="./games/script.js" defer></script>
+  <title>Document</title>
 </head>
 <body>
-    <div class="scene">
-        <div class="cube">
-          <div class="cube__face cube__face--front">
-            <div class="container">
-              <canvas height="600" width="600" class="gameboard-path" id="gameboard-path"></canvas>
-              <button id="start-btn-path" class="start-btn-path">Restart</button>
-            </div>
-          </div>
-          <div class="cube__face cube__face--back">back</div>
-          <div class="cube__face cube__face--right">right</div>
-          <div class="cube__face cube__face--left">left</div>
-          <div class="cube__face cube__face--top">top</div>
-          <div class="cube__face cube__face--bottom">bottom</div>
+  <div class="scene">
+    <div class="cube">
+      <div class="cube__face cube__face--front">Breakout
+        <div class="container">
+          <canvas width="600" height="600" class="gameboard-path" id="gameboard-path"></canvas>
+          <button id="start-btn-path" class="btn-start-path">Start</button>
         </div>
       </div>
-      <p class="radio-group">
-        <label>
-          <input type="radio" name="rotate-cube-side" value="front" checked /> front
-        </label>
-        <label>
-          <input type="radio" name="rotate-cube-side" value="right" /> right
-        </label>
-        <label>
-          <input type="radio" name="rotate-cube-side" value="back" /> back
-        </label>
-        <label>
-          <input type="radio" name="rotate-cube-side" value="left" /> left
-        </label>
-        <label>
-          <input type="radio" name="rotate-cube-side" value="top" /> top
-        </label>
-        <label>
-          <input type="radio" name="rotate-cube-side" value="bottom" /> bottom
-        </label>
-      </p>
-      
+      <div class="cube__face cube__face--back">Find your path
+        <div class="container">
+          <canvas width="600" height="600" class="gameboard-breakout" id="gameboard-breakout"></canvas>
+          <button id="start-btn-breakout" class="btn-start-breakout">Start</button>
+        </div>
+      </div>
+      <div class="cube__face cube__face--right">right</div>
+      <div class="cube__face cube__face--left">left</div>
+      <div class="cube__face cube__face--top">top</div>
+      <div class="cube__face cube__face--bottom">bottom</div>
+    </div>
+  </div>
+  <p class="radio-group">
+    <label>
+      <input type="radio" name="rotate-cube-side" value="front" checked /> Breakout
+    </label>
+    <label>
+      <input type="radio" name="rotate-cube-side" value="right" /> right
+    </label>
+    <label>
+      <input type="radio" name="rotate-cube-side" value="back" /> Find Your Path
+    </label>
+    <label>
+      <input type="radio" name="rotate-cube-side" value="left" /> left
+    </label>
+    <label>
+      <input type="radio" name="rotate-cube-side" value="top" /> top
+    </label>
+    <label>
+      <input type="radio" name="rotate-cube-side" value="bottom" /> bottom
+    </label>
+  </p>  
 </body>
 </html>
