--- a/index.html
+++ b/index.html
@@ -5,14 +5,26 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <script src="./Game_Jame/app/games/breakout.js" defer></script>
+  <script src="./Game_Jame/app/games/path.js" defer></script>
   <script src="script.js" defer></script>
   <title>Document</title>
 </head>
 <body>
   <div class="scene">
     <div class="cube">
-      <div class="cube__face cube__face--front">front</div>
-      <div class="cube__face cube__face--back">back</div>
+      <div class="cube__face cube__face--front">Breakout
+        <div class="container">
+          <canvas width="600" height="600" class="gameboard-path" id="gameboard-path"></canvas>
+          <button id="start-btn-path" class="btn-start-path">Start</button>
+        </div>
+      </div>
+      <div class="cube__face cube__face--back">Find your path
+        <div class="container">
+          <canvas width="600" height="600" class="gameboard-breakout" id="gameboard-breakout"></canvas>
+          <button id="start-btn-breakout" class="btn-start-breakout">Start</button>
+        </div>
+      </div>
       <div class="cube__face cube__face--right">right</div>
       <div class="cube__face cube__face--left">left</div>
       <div class="cube__face cube__face--top">top</div>
@@ -21,13 +33,13 @@
   </div>
   <p class="radio-group">
     <label>
-      <input type="radio" name="rotate-cube-side" value="front" checked /> front
+      <input type="radio" name="rotate-cube-side" value="front" checked /> Breakout
     </label>
     <label>
       <input type="radio" name="rotate-cube-side" value="right" /> right
     </label>
     <label>
-      <input type="radio" name="rotate-cube-side" value="back" /> back
+      <input type="radio" name="rotate-cube-side" value="back" /> Find Your Path
     </label>
     <label>
       <input type="radio" name="rotate-cube-side" value="left" /> left
