--- a/Game_Jame/app/index.html
+++ b/Game_Jame/app/index.html
@@ -13,13 +13,13 @@
 <body>
   <div class="scene">
     <div class="cube">
-      <div class="cube__face cube__face--front">Breakout
+      <div class="cube__face cube__face--front">Find your path
         <div class="container">
           <canvas width="600" height="600" class="gameboard-path" id="gameboard-path"></canvas>
           <button id="start-btn-path" class="btn-start-path">Start</button>
         </div>
       </div>
-      <div class="cube__face cube__face--back">Find your path
+      <div class="cube__face cube__face--back">Breakout
         <div class="container">
           <canvas width="600" height="600" class="gameboard-breakout" id="gameboard-breakout"></canvas>
           <button id="start-btn-breakout" class="btn-start-breakout">Start</button>
@@ -31,15 +31,19 @@
       <div class="cube__face cube__face--bottom">bottom</div>
     </div>
   </div>
+  <!-- ! -->
+  <h2>TEST BUTTON</h2>
+  <button class="winBtn">Appuyez ici </button>
+  <!-- ! -->
   <p class="radio-group">
     <label>
-      <input type="radio" name="rotate-cube-side" value="front" checked /> Breakout
+      <input type="radio" name="rotate-cube-side" value="front" checked /> Find Your Path
     </label>
     <label>
       <input type="radio" name="rotate-cube-side" value="right" /> right
     </label>
     <label>
-      <input type="radio" name="rotate-cube-side" value="back" /> Find Your Path
+      <input type="radio" name="rotate-cube-side" value="back" /> Breakout
     </label>
     <label>
       <input type="radio" name="rotate-cube-side" value="left" /> left
