integration du jeu arnaud, besoin verif

--- a/Game_Jame/app/index.html
+++ b/Game_Jame/app/index.html
@@ -8,6 +8,8 @@
   <script src="./games/breakout.js" defer></script>
   <script src="./games/path.js" defer></script>
   <script src="./games/script.js" defer></script>
+  <script src="./games/matter.js" defer></script>
+  <script src="./games/juggle_ball.js" defer></script>
   <title>Document</title>
 </head>
 <body>
@@ -34,7 +36,9 @@
     </div>
       <div class="cube__face cube__face--left">left</div>
       <div class="cube__face cube__face--top">top</div>
-      <div class="cube__face cube__face--bottom">bottom</div>
+      <div class="cube__face cube__face--bottom">Juggle Ball
+        <div id="juggle-ball"class="game__container"></div>
+      </div>
     </div>
   </div>
 </body>
