add css front and right face

--- a/Game_Jame/app/index.html
+++ b/Game_Jame/app/index.html
@@ -26,7 +26,7 @@
         </div>
       </div>
       <div class="cube__face cube__face--right">
-          <p>follow the path to run away</p>
+        <h2>follow the path to run away</h2>
         <div class="container">
           <canvas width="600" height="600" class="gameboard-path" id="gameboard-path"></canvas>
           <button id="start-btn-path" class="btn-start-path">Start</button>
