add back face css

--- a/Game_Jame/app/index.html
+++ b/Game_Jame/app/index.html
@@ -19,7 +19,7 @@
         <p>You're our last hope</p>
         <button id="start-btn" class="start-btn">Begin</button>
       </div>
-      <div class="cube__face cube__face--back">Breakout
+      <div class="cube__face cube__face--back"><h2>Breakout</h2>
         <div class="container">
           <canvas width="600" height="600" class="gameboard-breakout" id="gameboard-breakout"></canvas>
           <button id="start-btn-breakout" class="btn-start-breakout">Start</button>
