css bottom face done

--- a/Game_Jame/app/index.html
+++ b/Game_Jame/app/index.html
@@ -36,7 +36,7 @@
     </div>
       <div class="cube__face cube__face--left">left</div>
       <div class="cube__face cube__face--top">top</div>
-      <div class="cube__face cube__face--bottom">Juggle Ball
+      <div class="cube__face cube__face--bottom"><h2>Juggle Ball</h2>
         <div id="juggle-ball"class="game__container"></div>
       </div>
     </div>
