Revert "final commit"
This reverts commit 9d6507ce61dfec8b98432fbd6d2f3c3033d522fb.

--- a/Game_Jame/app/index.html
+++ b/Game_Jame/app/index.html
@@ -34,10 +34,7 @@
           <button id="start-btn-path" class="btn-start-path">Start</button>
         </div>
     </div>
-      <div class="cube__face cube__face--left"><h2>Great Job</h2>
-        <p>You've done it, the world will be saved</p>
-        <p>You found AIR in the box, because air is the most important thing for the human population</p>
-        <p>Keep doing your best to preserve planet and bio diversity</p></div>
+      <div class="cube__face cube__face--left">left</div>
       <div class="cube__face cube__face--top">top</div>
       <div class="cube__face cube__face--bottom"><h2>Juggle Ball</h2>
         <div id="juggle-ball"class="game__container"></div>
